--- a/src/main/resources/static/assets/css/templatemo-cyborg-gaming.css
+++ b/src/main/resources/static/assets/css/templatemo-cyborg-gaming.css
@@ -1347,29 +1347,59 @@ Live Stream Style
 Featured Banner Style
 --------------------------------------------- 
 */
+.feature-banner {
+	background-position: center center;
+	background-size: cover;
+	min-height: 430px;
+	border-radius: 5px;
+	padding: 80px 60px;
+}
 
-.feature-banner .thumb {
+.feature-banner .header-text{
 	position: relative;
-	max-height: 305px;
-	overflow: hidden;
-	border-radius: 23px;
-	;
+	margin-top: 250px;
 }
 
-.feature-banner .thumb a {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-23px, -23px);
-	width: 46px;
-	height: 46px;
-	background-color: #fff;
-	border-radius: 50%;
-	display: inline-block;
-	text-align: center;
-	line-height: 46px;
-	color: #ec6090;
+.feature-banner h6 {
+	font-size: 18px;
+	color: #fff;
+	font-weight: 400;
+	margin-bottom: 25px;
 }
+
+.feature-banner h4 {
+	font-size: 45px;
+	margin-bottom: 25px;
+}
+
+
+/* 
+---------------------------------------------
+detail information Style
+--------------------------------------------- 
+*/
+
+.detail-table {
+	font-size: 18px;
+	color: #fff;
+	font-weight: 400;
+	margin-top: 100px;
+	border-spacing: 0 10px;
+}
+
+.detail-table table{
+  width: 900px;
+  margin-left: 50px;
+  border-collapse: separate;
+  border-spacing: 0 30px;
+}
+
+.detail-table table tr .em{
+  font-size: 20px;
+  color: #fff;
+  font-weight: 600;
+}
+
 
 /* 
 ---------------------------------------------
@@ -1722,11 +1752,11 @@ body {
 		padding: 0px 30px;
 	}
 
-	.main-banner {
+	.owl-banner {
 		text-align: center;
 	}
 
-	.main-banner h4 {
+	.owl-banner h4 {
 		font-size: 35px;
 	}
 
