--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,17 +37,17 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
-                    <a href="main.html" class="logo">
+                    <a href="main" class="logo">
                         <img src="assets/images/logo.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li><a href="main.html" class="active">Home</a></li>
-                        <li><a href="movie.html">영화</a></li>
-                        <li><a href="tvprogram.html">TV프로그램</a></li>
-                        <li><a href="community.html">커뮤니티</a></li>
-                        <li><a href="mypage.html">마이 페이지<img src="assets/images/profile-header.jpg" alt=""></a></li>
+                        <li><a href="main" class="active">Home</a></li>
+                        <li><a href="movie">영화</a></li>
+                        <li><a href="tvprogram">TV프로그램</a></li>
+                        <li><a href="community">커뮤니티</a></li>
+                        <li><a href="mypage">마이 페이지<img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
