--- a/src/main/resources/templates/layout/mypage.html
+++ b/src/main/resources/templates/layout/mypage.html
@@ -121,7 +121,7 @@
 							   <tr th:each="qna, state: ${myqna}">
 								   <td th:text="${#dates.format(qna.write_date, 'yyyy-MM-dd')}"></td>
 								   <td th:text="${qna.title}"></td>
-								   <td th:if="${qna.replies != null and not #lists.isEmpty(qna.replies)}" th:style="color: #ec6090">답변완료</td>
+								   <td th:if="${qna.replies != null and not #lists.isEmpty(qna.replies)}" th:style="'color: #ec6090'">답변완료</td>
 								   <td th:unless="${qna.replies != null and not #lists.isEmpty(qna.replies)}">답변미완료</td>
 								   <!-- <td th:unless="${qna.repliesreplies.size() == 0}">답변미완료</td> -->
 								   <td><div class="main-border-button border-no-active"><a href="getboard(b_seq=${qna.b_seq})">go</a></div></td>
@@ -148,7 +148,7 @@
 								   <td th:text="${#dates.format(board.write_date, 'yyyy-MM-dd')}"></td>
 								   <td th:text="${board.title}"></td>
 								   <td th:if="${board.report != null and board.report != ''}"></td> <!-- 신고 안들어옴 -->
-								   <td th:unless="${board.report != null and board.report != ''}" th:style="color: #ec6090">숨김처리</td> <!-- 신고 들어옴 -->
+								   <td th:unless="${board.report != null and board.report != ''}" th:style="'color: #ec6090'">숨김처리</td> <!-- 신고 들어옴 -->
 								   <td><div class="main-border-button border-no-active"><a href="getboard(b_seq=${board.b_seq})">go</a></div></td>
 							   </tr>
 						   </table>
