--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,10 +16,10 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
+  	<link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+  	<link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
 TemplateMo 579 Cyborg Gaming
@@ -35,6 +35,13 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
         <div class="row">
             <div class="col-12">
+				
+				<ul class="upper-nav">
+                   <li><a href="login">로그인</a></li><!-- 로그인 되어있으면 로그아웃 -->
+                   <li><a href="#">이용권</a></li>
+				</ul>
+				<hr>
+				
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="main" class="logo">
@@ -44,14 +51,11 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li><a href="main" class="active">Home</a></li>
-                        <li><a href="movie">영화</a></li>
+                        <li><a href="allmovie">영화</a></li>
                         <li><a href="tvprogram">TV프로그램</a></li>
                         <li><a href="community">커뮤니티</a></li>
-                        <li><a href="/layout/login">마이 페이지<img src="assets/images/profile-header.jpg" alt=""></a></li>
-                    </ul>   
-                    <a class='menu-trigger'>
-                        <span>Menu</span>
-                    </a>
+                        <li><a href="mypage">마이 페이지<img src="assets/images/avatar-01.jpg" alt=""></a></li>
+                    </ul>
                     <!-- ***** Menu End ***** -->
                     <!-- ***** Search Start ***** -->
                     <div class="search-input">
