--- a/src/main/resources/templates/layout/allmovie.html
+++ b/src/main/resources/templates/layout/allmovie.html
@@ -14,17 +14,16 @@
 		  <h1>영화</h1>
 		</div>
 
-	<!-- 전체 목록 -->
-	
+	<!-- 인기 컨텐츠 -->
 	<div class="row">
 	  <div class="col-lg-12">
 		<div class="featured-contents header-text">
 		  <div class="heading-section">
-			<h3>전체 목록</h3>
+			<h3>인기컨텐츠</h3>
 		  </div>
 
 		  <div class="owl-features owl-carousel">
-		<div th:each="movie, state : ${movieList}" class="item">
+			<div th:each="movie, state : ${movieList}" class="item">
 			  <div class="thumb">
 				<img th:src="@{'/assets/images/movie/' + ${movie.image_path}}" alt="">
 				  <a th:href="@{detail(movie_code=${movie.movie_code})}">
@@ -38,7 +37,7 @@
 		  </div>
 		</div>
 	  </div>
-	
+	  
 	<!-- 로맨스 -->
 	<div class="row">
 	  <div class="col-lg-12">
@@ -48,7 +47,7 @@
 		  </div>
 
 		  <div class="owl-features owl-carousel">
-			<div th:each="romance, state : ${romanceList}"  class="item">
+			<div th:each="romance, state : ${romanceList}" class="item">
 			  <div class="thumb">
 				<img th:src="@{'/assets/images/movie/' + ${romance.image_path}}" alt="">
 				  <a th:href="@{detail(movie_code=${romance.movie_code})}">
@@ -64,7 +63,6 @@
 	  </div>
 	  
 	<!-- 판타지 -->
-	 
 	<div class="row">
 	  <div class="col-lg-12">
 		<div class="featured-contents header-text">
@@ -73,7 +71,7 @@
 		  </div>
 
 		  <div class="owl-features owl-carousel">
-			<div th:each="fantasy, state : ${fantasyList}"  class="item">
+			<div th:each="fantasy, state : ${fantasyList}" class="item">
 			  <div class="thumb">
 				<img th:src="@{'/assets/images/movie/' + ${fantasy.image_path}}" alt="">
 				  <a th:href="@{detail(movie_code=${fantasy.movie_code})}">
@@ -87,8 +85,8 @@
 		  </div>
 		</div>
 	  </div>
-	
-	 
+	  
+	  
 	  <!-- 액션 -->
 	<div class="row">
 	  <div class="col-lg-12">
