--- a/src/main/resources/templates/layout/login.html
+++ b/src/main/resources/templates/layout/login.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-</head>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+ <th:block th:replace="fragments/header :: header"></th:block>
+
 <body>
-    <h1>로그인페이지</h1>
-    <form th:action="@{/layout/login}" method="post">
-        <input type="text" name="id" required>
-        <input type="password" name="password" required>
-        <button type="submit">로그인</button>
-    </form>
-    <a th:href="@{/member/join}">가입</a><br>
-    <a th:href="@{/member/findUserId}">아이디 찾기</a><br>
-    <a th:href="@{/member/findUserPwd}">비밀번호 찾기</a><br>
-</body>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="page-content">
+
+		<!-- login page start -->
+		<div class="login">
+          <div class="col-lg-6">
+			<div class="login login-section">
+				<div class="heading-section">
+                  <h2>로그인</h2>
+                  <h4>용용플레이 계정으로 시작하기</h4>
+                </div>
+	            <div class="form-section">
+					<form th:action="@{/login}" method="post">
+						<div class="input_block"><input type="text" name="id" placeholder="id"/></div>
+						<div class="input_block"><input type="password" name="password" placeholder="Password"/></div>
+						<div class="link-block">
+						  <a href="join">회원가입</a> &nbsp; &nbsp;
+						  <a href="#">아이디/비밀번호 찾기</a>
+						</div>
+						<button class="signin_btn" type="submit">로그인</button>
+					</form>
+				</div>
+				<br>
+				<br>
+				<!-- separator -->
+				<div class="separator">
+					다른 서비스 계정으로 간편로그인
+				</div>
+				
+				<!-- button -->
+				<button class="google__btn">
+					<i class="fa fa-google"></i>
+				</button>
+				
+		      </div>
+		    </div>
+		  </div>
+          
+  <th:block th:replace="fragments/footer :: footer"></th:block>
+
+  </body>
+
 </html>
