--- a/src/main/resources/templates/layout/tvdetail.html
+++ b/src/main/resources/templates/layout/tvdetail.html
@@ -10,7 +10,7 @@
              <!-- ***** image Start ***** -->
              <div class="feature-banner" 
                   th:style="'background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), 
-                  url(\'/assets/images/tv/' + ${tvProgram.image_path} + '\')'">
+                  url('/assets/images/tv/' + ${tvProgram.image_path}')">
                <div class="row">
                  <div class="col-lg-12">
                    <div class="header-text">
