컬럼 사이즈 수정

--- a/src/main/resources/templates/layout/allmovie.html
+++ b/src/main/resources/templates/layout/allmovie.html
@@ -32,7 +32,7 @@
 					</div>
 				  </a>
 				</div>
-			  <h4>[[${movie.m_title_ko}]]</h4>
+			  <h4>[[${movie.mTitle_ko}]]</h4>
 			</div>
 		  </div>
 		</div>
@@ -56,7 +56,7 @@
 					</div>
 				  </a>
 				</div>
-			  <h4>[[${romance.m_title_ko}]]</h4>
+			  <h4>[[${romance.mTitle_ko}]]</h4>
 			</div>
 		  </div>
 		</div>
@@ -80,7 +80,7 @@
 					</div>
 				  </a>
 				</div>
-			  <h4>[[${fantasy.m_title_ko}]]</h4>
+			  <h4>[[${fantasy.mTitle_ko}]]</h4>
 			</div>
 		  </div>
 		</div>
@@ -105,7 +105,7 @@
 					</div>
 				  </a>
 				</div>
-			  <h4>[[${action.m_title_ko}]]</h4>
+			  <h4>[[${action.mTitle_ko}]]</h4>
 			</div>
 		  </div>
 		</div>
@@ -129,7 +129,7 @@
 					</div>
 				  </a>
 				</div>
-			  <h4>[[${drama.m_title_ko}]]</h4>
+			  <h4>[[${drama.mTitle_ko}]]</h4>
 			</div>
 		  </div>
 		</div>
