--- a/src/main/resources/templates/layout/member/mypage.html
+++ b/src/main/resources/templates/layout/member/mypage.html
@@ -100,7 +100,7 @@
                 <h4>내가 쓴 글</h4>
               </div>
               <div class="main-button">
-				<a href="#">커뮤니티 바로가기</a>
+				<a href="community">커뮤니티 바로가기</a>
 			  </div>
 			<div class="col-lg-12">
 			  <div class="item">
@@ -119,7 +119,7 @@
 								   <td></td>
 							   </tr>
 							   <tr th:each="qna, state: ${myqna}">
-								   <td th:text="${#dates.format(qna.write_date, 'yyyy-MM-dd')}"></td>
+								   <td th:text="${#dates.format(qna.write_date, 'yyyy-MM-dd')}" ></td>
 								   <td th:text="${qna.title}"></td>
 								   <td th:if="${qna.replies != null and not #lists.isEmpty(qna.replies)}" th:style="'color: #ec6090'">답변완료</td>
 								   <td th:unless="${qna.replies != null and not #lists.isEmpty(qna.replies)}">답변미완료</td>
@@ -144,7 +144,7 @@
 								   <td></td>
 								   <td></td>
 							   </tr>
-							   <tr th:each="board, state: ${myboard}" th:if="${board.b_category ne 'qna'}">
+							   <tr th:each="board, state: ${myboard}">
 								   <td th:text="${#dates.format(board.write_date, 'yyyy-MM-dd')}"></td>
 								   <td th:text="${board.title}"></td>
 								   <td th:if="${board.report != null and board.report != ''}"></td> <!-- 신고 안들어옴 -->
