--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -43,7 +43,7 @@
                   <div class="item">
                     <div class="thumb">
                       <img th:src="@{'/assets/images/movie/' + ${movie.image_path}}" alt="">
-                      	<a th:href="@{detail(movie_code=${movie.movie_code})}">
+                      	<a th:href="@{moviedetail(movie_code=${movie.movie_code})}">
 	                      <div class="hover-effect">
 	                        	<h6>바로보기</h6>
 	                      </div>
