--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -13,7 +13,7 @@
 		  <div class="footer"></div>
 			<p>용용플레이 프로젝트
 				<br><span th:style="'color: #ec6090'">팀장: 정민수</span>
-				<br><span th:style="'color: #9ADBE8'">팀원: 류효정, 최준희, 심혜린</span>
+				<br><span th:style="'color: #9ADBE8'">팀원: 류효정, 심혜린</span>
 				<br>시작일자: 2023.11.17
 				<br>고객센터: 1599-1234 (1000 ~ 1800) 
 				<br>Copyright© 용용플레이(주) All rights reserved.
