--- a/src/main/resources/templates/layout/contents/tvdetail.html
+++ b/src/main/resources/templates/layout/contents/tvdetail.html
@@ -8,16 +8,16 @@
             <div class="page-content">
 				
              <!-- ***** image Start ***** -->
-             <div class="feature-banner" 
-                  th:style="'background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), 
-                  url(\'/assets/images/tv/' + ${tvProgram.banner_path} + '\')'">
+             <div class="feature-banner tv" 
+    				th:style="'background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), 
+    				url(/assets/images/tv/' + ${tvProgram.banner_path} + ') '">
                <div class="row">
                  <div class="col-lg-12">
                    <div class="header-text">
                     <!--  <a th:href="'https://www.youtube.com/watch?v=' + ${tvProgram.video_path}" target="_blank">-->
                      <h4>[[${tvProgram.p_title}]]</h4>
                      <h6>[[${tvProgram.airing_period}]] &nbsp; &nbsp; [[${tvProgram.p_category}]]</h6>
-                   </div>
+                   </div> 
                  </div>
                </div>
             </div>
@@ -45,7 +45,7 @@
 						<td th:text="${tvProgram.p_cast}"></td>
 					</tr>
 					<tr>
-						<td class="em" th:text="감독"></td>
+						<td class="em" th:text="감독"></td>  
 						<td th:text="${tvProgram.p_director}"></td>
 					</tr>
 					<tr>
@@ -54,23 +54,41 @@
 					</tr>
 				</table>
             </div>
+            
+            <hr>
+            
             <!-- episope -->
-          <div class="owl-features owl-carousel">
-		<div th:each="episode, state : ${epiList}" class="item">
-			  <div class="thumb">
-				<img th:src="@{'/assets/images/tv/' + ${tvProgram.image_path}}" alt="">
-					<div class="play">
-					    <a th:href="'https://www.youtube.com/watch?v=' + ${episode.video_path}" target="_blank">
-					     <span th:text="${#dates.format(episode.airing_date, 'yyyy-MM-dd')}"></span>
-							<p class="play-text">재생하기</p>
-				   		</a>
-				   </div>
-				     
-				  </a>
-				</div>
-			  <h4>[[${episode.ep_title}]]</h4>
-			</div>
-		  </div>
+            <div class="episode-table">
+            	<table>
+            		<tr th:each="epi, state : ${epiList}">
+            			<div class="episode">
+            					<a th:href="'https://www.youtube.com/watch?v=' + ${epi.video_path}" target="_blank">
+							<div class="ep-image">
+								<img th:src="@{'/assets/images/tv/' + ${tvProgram.banner_path}}"> 
+								
+									<div class="play">
+									 
+									<i class="fa fa-play"></i></div>
+							</div>
+							<div class="ep-info">								
+							    <h5 th:text="${epi.ep_title}"></h5>
+							    <div class="ep">
+									<p th:text="${epi.running_time}"></p>
+									<!--<p th:text="${epi.airing_date}"></p>-->
+									<p th:text="${#dates.format(epi.airing_date, 'yyyy-MM-dd')}"></p>
+								 </div>
+								<span th:text="${epi.description}" class="ep-desc"></span>
+								</a>
+							</div>
+							
+						</div>
+            		</tr>
+            	</table>
+            	<div class="toggle-btn">
+	            	<buttton class="showmore" id="showmore">더보기</buttton>
+	            	<buttton class="close" id="close">닫기</buttton>
+            	</div>
+            </div>
             
              </div>
           </div>
