--- a/src/main/resources/templates/layout/member/modify.html
+++ b/src/main/resources/templates/layout/member/modify.html
@@ -84,7 +84,7 @@
                                  <input type="date" name="end_date" th:value="${#dates.format(session.member.end_date, 'yyyy-MM-dd')}" readonly>
                               </div>
                               <div class="link-block">
-                                 <a th:href="@{/member/main}">메인으로</a> &nbsp; &nbsp; <a th:href="@{/member/delete}">탈퇴</a>
+                                 <a th:href="@{/main}">메인으로</a> &nbsp; &nbsp; <a th:href="@{/delete}">탈퇴</a>
                               </div>                              
                               <input class="signin_btn" type="submit" value="회원정보 수정" >
                            </form>
