--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -67,13 +67,11 @@ https://templatemo.com/tm-579-cyborg-gaming
 	                    <!-- ***** Menu End ***** -->
 	                    <!-- ***** Search Start ***** -->
 	                    <div class="search-input">
-								<form id="search" th:action="@{/search}">
-									<input type="text" placeholder="Search" id='searchText'
-										name="searchKeyword" onkeypress="handle" /> <i
-										class="fa fa-search"></i>
-								</form>
-
-							</div>
+	                      <form id="search" action="#">
+	                        <input type="text" placeholder="Search" id='searchText' name="searchKeyword" onkeypress="handle" />
+	                        <i class="fa fa-search"></i>
+	                      </form>
+	                    </div>
 	                    <!-- ***** Search End ***** -->
                 </nav>
                 
