--- a/src/main/resources/templates/layout/community.html
+++ b/src/main/resources/templates/layout/community.html
@@ -3,7 +3,6 @@
 
  <th:block th:replace="fragments/header :: header"></th:block>
 
-
 <body>
 
 
@@ -35,32 +34,32 @@
 					  </div>
 		              <!-- ***** Search End ***** -->
 		              
-				<!--  ***** Hot Post Start  ***** -->
-               <div class="row">
-                  <div class="col-lg-12">
-                     <div class="community hot-post">
-                       <h3>인기글</h3>
-               
-                        <div class="owl-features owl-carousel owl-theme">
-                           <div th:each="hot, state : ${hotBoardList}" th:if="${hot.b_category ne 'qna' and hot.b_category ne 'info'}" class="community hot-post-section" >
-                              <a th:href="@{gopost(b_seq=${hot.b_seq})}">
-                                 <div class="community post-mini">
-                                    <span class="item" th:text="${hot.b_category}"></span>
-                                    <h4 th:text="${hot.title}"></h4>
-                                    <div class="post-mini-bottom">
-                                       <i class="fa fa-bullseye" th:text="${hot.cnt}"></i>
-                                       <i class="fa fa-thumbs-up" th:text="${hot.b_like}"></i>
-                                       <i class="fa fa-message" th:text="${hot.replies.size()}"></i>
-                                    </div>
-                                 </div>
-                              </a>
-                           </div>
-                        </div>
-               
-                     </div>
-                  </div>
-               </div>
-               <!--  ***** Hot Post End  ***** -->
+					<!--  ***** Hot Post Start  ***** -->
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="community hot-post">
+							  <h3>인기글</h3>
+					
+								<div class="owl-features owl-carousel owl-theme">
+									<div th:each="hot, state : ${hotBoardList}" class="community hot-post-section">
+										<a th:href="@{gopost(b_seq=${hot.b_seq})}">
+											<div class="community post-mini">
+												<span class="item" th:text="${hot.b_category}"></span>
+												<h4 th:text="${hot.title}"></h4>
+												<div class="post-mini-bottom">
+													<i class="fa fa-bullseye" th:text="${hot.cnt}"></i>
+													<i class="fa fa-thumbs-up" th:text="${hot.b_like}"></i>
+													<i class="fa fa-message" th:text="${hot.replies.size()}"></i>
+												</div>
+											</div>
+										</a>
+									</div>
+								</div>
+					
+							</div>
+						</div>
+					</div>
+					<!--  ***** Hot Post End  ***** -->
           	
           	<hr>
           	
@@ -76,20 +75,17 @@
 				  
 					<!-- ***** Category Select Start ***** -->
 					<div class="community category-section">
-					<span class="item main-border-button">
-							<a th:href="@{/community}">전체목록</a>
+						<span class="item main-border-button">
+							<a href="community(category='qna')">Q&A</a>
 						</span>
 						<span class="item main-border-button">
-							<a th:href="@{/community(category='qna')}">Q&A</a>
+							<a href="community(category='info')">공지</a>
 						</span>
 						<span class="item main-border-button">
-						   <a th:href="@{/community(category='info')}">공지</a>
+							<a href="community(category='talk')">수다</a>
 						</span>
 						<span class="item main-border-button">
-							 <a th:href="@{/community(category='talk')}">수다</a>
-						</span>
-						<span class="item main-border-button">
-						 	<a th:href="@{/community(category='review')}">후기</a>
+							<a href="community(category='review')">후기</a>
 						</span>
 					</div>
 					<!-- ***** Category Select End ***** -->
